bad/div_invalid_types_null_string.example_compiler_output
ERROR
[1mbad/div_invalid_types_null_string.lat:3:7: [1;31merror: [0;1mdivision is defined only for int values, not `null` and `string`[m
	null / "";
	     [1;32m^[m
